[gd_scene load_steps=10 format=3 uid="uid://deer2b0fto4ol"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_v46e6"]
[ext_resource type="Texture2D" uid="uid://c842mkd8yygj5" path="res://sprites/background/backgroundColorGrass.png" id="2_0hyoa"]
[ext_resource type="Texture2D" uid="uid://kvq6a4v6abbr" path="res://sprites/background/house1.png" id="3_io140"]
[ext_resource type="Texture2D" uid="uid://c027c8vvchgli" path="res://sprites/planets/planet03.png" id="4_pc6mt"]
[ext_resource type="Texture2D" uid="uid://crmw5mba74epd" path="res://sprites/planets/parts/noise24.png" id="5_ry41q"]
[ext_resource type="Texture2D" uid="uid://b7k8fca0ahsu2" path="res://sprites/player/male/player_tilesheet.png" id="6_r7ks4"]
[ext_resource type="Texture2D" uid="uid://dy6bnje4sd0br" path="res://sprites/player/male/player_stand.png" id="7_55pye"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_skc8y"]
texture = ExtResource("6_r7ks4")
3:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
27:0/0 = 0
28:0/0 = 0
31:0/0 = 0
32:0/0 = 0
38:0/0 = 0
43:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
27:1/0 = 0
28:1/0 = 0
31:1/0 = 0
32:1/0 = 0
33:1/0 = 0
34:1/0 = 0
36:1/0 = 0
37:1/0 = 0
38:1/0 = 0
41:1/0 = 0
42:1/0 = 0
43:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
31:2/0 = 0
32:2/0 = 0
33:2/0 = 0
34:2/0 = 0
35:2/0 = 0
36:2/0 = 0
37:2/0 = 0
38:2/0 = 0
39:2/0 = 0
40:2/0 = 0
41:2/0 = 0
42:2/0 = 0
43:2/0 = 0
44:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
31:3/0 = 0
32:3/0 = 0
33:3/0 = 0
34:3/0 = 0
35:3/0 = 0
36:3/0 = 0
37:3/0 = 0
38:3/0 = 0
39:3/0 = 0
40:3/0 = 0
41:3/0 = 0
42:3/0 = 0
43:3/0 = 0
44:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
31:4/0 = 0
32:4/0 = 0
33:4/0 = 0
35:4/0 = 0
36:4/0 = 0
37:4/0 = 0
38:4/0 = 0
39:4/0 = 0
40:4/0 = 0
41:4/0 = 0
42:4/0 = 0
43:4/0 = 0
44:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
31:5/0 = 0
32:5/0 = 0
33:5/0 = 0
36:5/0 = 0
37:5/0 = 0
38:5/0 = 0
40:5/0 = 0
41:5/0 = 0
42:5/0 = 0
43:5/0 = 0
44:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
26:6/0 = 0
27:6/0 = 0
28:6/0 = 0
31:6/0 = 0
32:6/0 = 0
33:6/0 = 0
36:6/0 = 0
37:6/0 = 0
38:6/0 = 0
40:6/0 = 0
41:6/0 = 0
42:6/0 = 0
43:6/0 = 0
44:6/0 = 0
2:7/0 = 0
3:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
12:7/0 = 0
13:7/0 = 0
17:7/0 = 0
18:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
28:7/0 = 0
32:7/0 = 0
33:7/0 = 0
36:7/0 = 0
37:7/0 = 0
38:7/0 = 0
41:7/0 = 0
42:7/0 = 0
43:7/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
25:8/0 = 0
26:8/0 = 0
27:8/0 = 0
28:8/0 = 0
30:8/0 = 0
31:8/0 = 0
32:8/0 = 0
33:8/0 = 0
36:8/0 = 0
37:8/0 = 0
38:8/0 = 0
40:8/0 = 0
41:8/0 = 0
42:8/0 = 0
43:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
24:9/0 = 0
25:9/0 = 0
26:9/0 = 0
27:9/0 = 0
28:9/0 = 0
30:9/0 = 0
31:9/0 = 0
32:9/0 = 0
33:9/0 = 0
36:9/0 = 0
37:9/0 = 0
38:9/0 = 0
40:9/0 = 0
41:9/0 = 0
42:9/0 = 0
43:9/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
25:10/0 = 0
26:10/0 = 0
27:10/0 = 0
28:10/0 = 0
30:10/0 = 0
31:10/0 = 0
32:10/0 = 0
33:10/0 = 0
35:10/0 = 0
36:10/0 = 0
37:10/0 = 0
38:10/0 = 0
39:10/0 = 0
40:10/0 = 0
41:10/0 = 0
42:10/0 = 0
43:10/0 = 0
44:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
25:11/0 = 0
26:11/0 = 0
27:11/0 = 0
28:11/0 = 0
29:11/0 = 0
30:11/0 = 0
31:11/0 = 0
32:11/0 = 0
33:11/0 = 0
34:11/0 = 0
35:11/0 = 0
36:11/0 = 0
37:11/0 = 0
38:11/0 = 0
39:11/0 = 0
40:11/0 = 0
41:11/0 = 0
42:11/0 = 0
43:11/0 = 0
44:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
26:12/0 = 0
27:12/0 = 0
28:12/0 = 0
30:12/0 = 0
31:12/0 = 0
32:12/0 = 0
33:12/0 = 0
34:12/0 = 0
35:12/0 = 0
36:12/0 = 0
37:12/0 = 0
38:12/0 = 0
39:12/0 = 0
40:12/0 = 0
41:12/0 = 0
42:12/0 = 0
43:12/0 = 0
44:12/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
23:13/0 = 0
25:13/0 = 0
26:13/0 = 0
27:13/0 = 0
28:13/0 = 0
30:13/0 = 0
31:13/0 = 0
32:13/0 = 0
36:13/0 = 0
37:13/0 = 0
38:13/0 = 0
39:13/0 = 0
41:13/0 = 0
42:13/0 = 0
43:13/0 = 0
44:13/0 = 0
2:14/0 = 0
3:14/0 = 0
7:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
22:14/0 = 0
23:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
21:15/0 = 0
22:15/0 = 0
23:15/0 = 0
24:15/0 = 0
26:15/0 = 0
27:15/0 = 0
28:15/0 = 0
29:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
21:16/0 = 0
22:16/0 = 0
23:16/0 = 0
24:16/0 = 0
26:16/0 = 0
27:16/0 = 0
28:16/0 = 0
29:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
16:17/0 = 0
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
21:17/0 = 0
22:17/0 = 0
23:17/0 = 0
24:17/0 = 0
26:17/0 = 0
27:17/0 = 0
28:17/0 = 0
29:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
12:18/0 = 0
13:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
17:18/0 = 0
18:18/0 = 0
19:18/0 = 0
20:18/0 = 0
21:18/0 = 0
22:18/0 = 0
23:18/0 = 0
24:18/0 = 0
25:18/0 = 0
26:18/0 = 0
27:18/0 = 0
28:18/0 = 0
29:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
19:19/0 = 0
20:19/0 = 0
21:19/0 = 0
22:19/0 = 0
23:19/0 = 0
24:19/0 = 0
25:19/0 = 0
26:19/0 = 0
27:19/0 = 0
28:19/0 = 0
29:19/0 = 0

[sub_resource type="TileSet" id="TileSet_njrv7"]
sources/0 = SubResource("TileSetAtlasSource_skc8y")

[node name="Main" type="Node2D"]
metadata/_edit_lock_ = true

[node name="SubViewport" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="SubViewport"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v46e6")
metadata/_edit_lock_ = true

[node name="MenuBar" type="Panel" parent="SubViewport/Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -16.0
offset_right = 23.0
offset_bottom = 39.0
grow_horizontal = 2
metadata/_edit_lock_ = true

[node name="Wallet" type="HBoxContainer" parent="SubViewport/Control/MenuBar"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 1002.0
offset_bottom = 40.0
grow_horizontal = 2
alignment = 1
metadata/_edit_lock_ = true

[node name="WalletCur" type="Label" parent="SubViewport/Control/MenuBar/Wallet"]
layout_mode = 2
text = "È»"
vertical_alignment = 2
metadata/_edit_lock_ = true

[node name="WalletVal" type="Label" parent="SubViewport/Control/MenuBar/Wallet"]
layout_mode = 2
text = "0"
metadata/_edit_lock_ = true

[node name="WalletTxt" type="Label" parent="SubViewport/Control/MenuBar/Wallet"]
layout_mode = 2
text = "Wallet"
metadata/_edit_lock_ = true

[node name="BatteryCap" type="HBoxContainer" parent="SubViewport/Control/MenuBar"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 876.0
offset_right = -126.0
offset_bottom = 40.0
grow_horizontal = 2
alignment = 1
metadata/_edit_lock_ = true

[node name="BatCapPer" type="Label" parent="SubViewport/Control/MenuBar/BatteryCap"]
layout_mode = 2
text = "%"
vertical_alignment = 2
metadata/_edit_lock_ = true

[node name="BatCapVal" type="Label" parent="SubViewport/Control/MenuBar/BatteryCap"]
layout_mode = 2
text = "0"
metadata/_edit_lock_ = true

[node name="BatCapTxt" type="Label" parent="SubViewport/Control/MenuBar/BatteryCap"]
layout_mode = 2
text = "Capacity"
metadata/_edit_lock_ = true

[node name="BatteryBar" type="ProgressBar" parent="SubViewport/Control/MenuBar"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -58.0
offset_top = 7.0
offset_right = 148.0
offset_bottom = 34.0
grow_horizontal = 2
max_value = 500.0
step = 2.08165e-12
rounded = true

[node name="Label" type="Label" parent="SubViewport/Control/MenuBar"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -123.0
offset_top = 9.0
offset_right = -65.0
offset_bottom = 32.0
grow_horizontal = 2
text = "Battery"

[node name="WelcomeDlg" type="AcceptDialog" parent="SubViewport/Control"]
title = "Welcome!"
initial_position = 1
size = Vector2i(437, 184)
dialog_text = "Welcome to Solar Credits! Here, your home is your own personal solar farm. Surplus energy is automatically returned to the grid in exchange for Credits. That money can then be spent in the marketplace."
dialog_autowrap = true

[node name="Node2D" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Background" type="Sprite2D" parent="Node2D"]
position = Vector2(559, 302)
scale = Vector2(1.2168, 1)
texture = ExtResource("2_0hyoa")
metadata/_edit_lock_ = true

[node name="House" type="Sprite2D" parent="Node2D"]
position = Vector2(719, 384)
texture = ExtResource("3_io140")

[node name="Planet" type="Node2D" parent="Node2D"]
position = Vector2(137, 176)
metadata/_edit_lock_ = true

[node name="Earth" type="Sprite2D" parent="Node2D/Planet"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("4_pc6mt")

[node name="Cycle" type="Sprite2D" parent="Node2D/Planet"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("5_ry41q")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_njrv7")
format = 2

[node name="Player" type="Sprite2D" parent="."]
position = Vector2(460, 396)
texture = ExtResource("7_55pye")
